[gd_scene load_steps=3 format=3 uid="uid://supubb7y0o40"]

[ext_resource type="Script" path="res://assets/OptionsMenu.gd" id="1_xtmar"]
[ext_resource type="Texture2D" uid="uid://dri0esr35otpi" path="res://images/subwaySkyBackground.png" id="1_yv8ou"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xtmar")

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0.407843)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_yv8ou")
expand_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -190.0
offset_top = -115.0
offset_right = 190.0
offset_bottom = 115.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_stretch_ratio = 0.0
theme_override_constants/separation = 67

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Volume
"

[node name="HSlider" type="HSlider" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
value = 100.0

[node name="Button" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Restart"

[node name="Button2" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Exit Game"

[connection signal="drag_ended" from="VBoxContainer/HBoxContainer/HSlider" to="." method="_on_h_slider_drag_ended"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer/HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Button2" to="." method="_on_button_2_pressed"]
